Changes in Shorewall 4.4.16 Beta 5

1)  Fix broken logical naming with Proxy ARP.

Changes in Shorewall 4.4.16 Beta 4

1)  Only issue get_params() warnings under 'trace'

2)  Add ppp support to Shorewall-init

Changes in Shorewall 4.4.16 Beta 3

1)  Integrate bug catcher into 'trace' and correct handling of
    getparams on old (RHEL 5) shells.

Changes in Shorewall 4.4.16 Beta 2

1)  Install bug catcher.

Changes in Shorewall 4.4.16 Beta 1

1)  Handle multi-line ENV values

2)  Fix for absent params file.

Changes in Shorewall 4.4.15

1)  Add macros from Tuomo Soini.

2)  Corrected macro.JAP.

3)  Added fatal_error() functions to the -lite CLIs.

RC 1

1)  Another Perl 5.12 warning.

2)  Avoid anomalous behavior regarding syn flood chains.

3)  Add HEADERS column for IPv6

Beta 2

1)  Tweaks to IPv6 tcfilters

2)  Add support for explicit provider routes

3)  Fix shared TC tcfilters handling.

Beta 1

1)  Handle exported VERBOSE.

2)  Modernize handling of the params file.

3)  Fix NULL_ROUTE_RFC1918

4)  Fix problem of appending incorrect files.

5)  Implement shared TC.

Changes in Shorewall 4.4.14

1)  Support ipset lists.

2)  Use conntrack in 'shorewall connections'

3)  Clean up Shorewall6 error messages when running on a kernel <
    2.6.24

4)  Clean up ipset related error reporting out of validate_net().

5)  Dramatically reduce the amount of CPU time spent in optimization.

6)  Add 'scfilter' script.

7)  Fix -lite init scripts.

8)  Clamp VERBOSITY to valid range.

9)  Delete obsolete options from shorewall.conf.

10) Change value of FORWARD_CLEAR_MARK in *.conf.

11) Use update-rc.d to install init symlinks.

12) Fix split_list().

13) Fix 10+ TC Interfaces.

14) Insure that VERBOSITY=0 when interrogating compiled script's version

Changes in Shorewall 4.4.13

1)  Allow zone lists in rules SOURCE and DEST.

2)  Fix exclusion in the blacklist file.

3)  Correct several old exclusion bugs.

4)  Fix exclusion with CONTINUE/NONAT/ACCEPT+
