@@ -2,6 +2,10 @@ Changes in Shorewall 4.4.16 Beta 5
 
 1)  Fix broken logical naming with Proxy ARP.
 
+2)  Add support for proxyndp.
+
+3)  Move mid-level rule processing to the Actions module.
+
 Changes in Shorewall 4.4.16 Beta 4
 
 1)  Only issue get_params() warnings under 'trace'
